--- a/prj.conf
+++ b/prj.conf
@@ -1,8 +1,10 @@
 CONFIG_GPIO=y
-CONFIG_USB=y
-CONFIG_USB_DEVICE_STACK=y
-CONFIG_USB_REQUEST_BUFFER_SIZE=300
-CONFIG_UART_INTERRUPT_DRIVEN=y
+#CONFIG_USB=y
+#CONFIG_USB_DEVICE_STACK=y
+#CONFIG_USB_REQUEST_BUFFER_SIZE=300
+#CONFIG_UART_INTERRUPT_DRIVEN=y #redundant
+#CONFIG_UART_PIPE=y
+#CONFIG_UART_PIPE_ON_DEV_NAME="UART_0"
 
 CONFIG_TEST_RANDOM_GENERATOR=y
 
@@ -19,3 +21,9 @@ CONFIG_KERNEL_SHELL=y
 CONFIG_NET_CONFIG_SETTINGS=y
 CONFIG_NET_CONFIG_AUTO_INIT=n
 CONFIG_NET_LOG=y
+
+
+CONFIG_WPANUSB_UART_BUF_LEN=128
+
+CONFIG_WPANUSB_RX_PRIORITY=7
+CONFIG_WPANUSB_RX_STACK_SIZE=768
