--- a/prj.conf
+++ b/prj.conf
@@ -22,8 +22,14 @@ CONFIG_NET_CONFIG_SETTINGS=y
 CONFIG_NET_CONFIG_AUTO_INIT=n
 CONFIG_NET_LOG=y
 
+CONFIG_LOG_BUFFER_SIZE=32768
+CONFIG_LOG_STRDUP_MAX_STRING=256
+#CONFIG_LOG_STRDUP_BUF_COUNT=12
+CONFIG_IEEE802154_DRIVER_LOG_LEVEL_DBG=y
 
-CONFIG_WPANUSB_UART_BUF_LEN=128
-
-CONFIG_WPANUSB_RX_PRIORITY=7
-CONFIG_WPANUSB_RX_STACK_SIZE=768
+#CONFIG_WPANUSB_UART_NAME="UART_1"
+#CONFIG_WPANUSB_UART_BUF_LEN=8
+#CONFIG_WPANUSB_RINGBUF_SIZE=256
+#CONFIG_WPANUSB_RX_PRIORITY=7
+#CONFIG_WPANUSB_RX_STACK_SIZE=768
+#CONFIG_WPANUSB_NET_BUF_SIZE=256
