--- a/prj.conf
+++ b/prj.conf
@@ -33,3 +33,6 @@ CONFIG_IEEE802154_DRIVER_LOG_LEVEL_DBG=y
 #CONFIG_WPANUSB_RX_PRIORITY=7
 #CONFIG_WPANUSB_RX_STACK_SIZE=768
 #CONFIG_WPANUSB_NET_BUF_SIZE=256
+
+#CONFIG_NET_DEBUG_NET_PKT_ALLOC=y
+#CONFIG_NET_PKT_LOG_LEVEL_DBG=y
