--- a/prj.conf
+++ b/prj.conf
@@ -4,7 +4,6 @@ CONFIG_NET_BUF_DATA_SIZE=128
 
 CONFIG_IEEE802154=y
 CONFIG_IEEE802154_RAW_MODE=y
-CONFIG_IEEE802154_CC13XX_CC26XX_RX_FRAME_QUEUE_DEPTH=5
 
 CONFIG_SHELL=y
 CONFIG_KERNEL_SHELL=y
@@ -16,6 +15,13 @@ CONFIG_NET_LOG=y
 #CONFIG_LOG_BUFFER_SIZE=32768
 #CONFIG_LOG_STRDUP_MAX_STRING=256
 #CONFIG_LOG_STRDUP_BUF_COUNT=12
-#CONFIG_IEEE802154_DRIVER_LOG_LEVEL_DBG=y
+CONFIG_IEEE802154_DRIVER_LOG_LEVEL_DBG=y
 #CONFIG_NET_DEBUG_NET_PKT_ALLOC=y
 #CONFIG_NET_PKT_LOG_LEVEL_DBG=y
+
+CONFIG_IEEE802154_CC13XX_CC26XX=y
+CONFIG_NET_CONFIG_IEEE802154_DEV_NAME="IEEE802154_0"
+CONFIG_NET_CONFIG_IEEE802154_CHANNEL=26
+CONFIG_IEEE802154_CC13XX_CC26XX_SUB_GHZ=n
+
+CONFIG_IEEE802154_DRIVER_LOG_LEVEL_DBG=y
