--- a/prj.conf
+++ b/prj.conf
@@ -1,13 +1,5 @@
-CONFIG_GPIO=y
-CONFIG_USB=y
-CONFIG_USB_DEVICE_STACK=y
-CONFIG_USB_REQUEST_BUFFER_SIZE=300
-CONFIG_UART_INTERRUPT_DRIVEN=y
-
-CONFIG_TEST_RANDOM_GENERATOR=y
-
 CONFIG_NETWORKING=y
-CONFIG_NET_PKT_TX_COUNT=4
+CONFIG_NET_PKT_TX_COUNT=6
 CONFIG_NET_BUF_DATA_SIZE=128
 
 CONFIG_IEEE802154=y
@@ -19,3 +11,16 @@ CONFIG_KERNEL_SHELL=y
 CONFIG_NET_CONFIG_SETTINGS=y
 CONFIG_NET_CONFIG_AUTO_INIT=n
 CONFIG_NET_LOG=y
+
+#CONFIG_LOG_BUFFER_SIZE=32768
+#CONFIG_LOG_STRDUP_MAX_STRING=256
+#CONFIG_LOG_STRDUP_BUF_COUNT=12
+#CONFIG_NET_DEBUG_NET_PKT_ALLOC=y
+#CONFIG_NET_PKT_LOG_LEVEL_DBG=y
+
+CONFIG_IEEE802154_DRIVER_LOG_LEVEL_DBG=y
+
+CONFIG_IEEE802154_CC13XX_CC26XX=y
+CONFIG_NET_CONFIG_IEEE802154_DEV_NAME="IEEE802154_0"
+CONFIG_NET_CONFIG_IEEE802154_CHANNEL=26
+CONFIG_IEEE802154_CC13XX_CC26XX_SUB_GHZ=n
