--- a/prj.conf
+++ b/prj.conf
@@ -5,6 +5,10 @@ CONFIG_NET_BUF_DATA_SIZE=128
 CONFIG_IEEE802154=y
 CONFIG_IEEE802154_RAW_MODE=y
 
+#CONFIG_UART_CONSOLE=n
+#CONFIG_WPANUSB_CONSOLE=y
+#CONFIG_UART_INTERRUPT_DRIVEN=y
+
 CONFIG_SHELL=y
 CONFIG_KERNEL_SHELL=y
 
@@ -18,7 +22,8 @@ CONFIG_NET_LOG=y
 #CONFIG_NET_DEBUG_NET_PKT_ALLOC=y
 #CONFIG_NET_PKT_LOG_LEVEL_DBG=y
 
-CONFIG_IEEE802154_DRIVER_LOG_LEVEL_DBG=y
+#CONFIG_IEEE802154_DRIVER_LOG_LEVEL_DBG=y
+CONFIG_IEEE802154_DRIVER_LOG_LEVEL_WRN=y
 
 CONFIG_IEEE802154_CC13XX_CC26XX=y
 CONFIG_NET_CONFIG_IEEE802154_DEV_NAME="IEEE802154_0"
