wpanusb: enhancement for beagleconnect freedom Rev C2 gateway
* get valid channels from device
* with the changes Sub-G(requires SubG PA patch) works without issues
* sometimes host sets an invalid channel(like channel 0) for 2.4G, getting
valid channels from gateway device, ensures that this does not happen.
* change some of the non frequent DBG prints to INF.
* 2.4G fails at setting channel

depends on https://github.com/statropy/wpanusb/pull/5

Signed-off-by: Vaishnav M A <vaishnav@beagleboard.org>

--- a/Kconfig
+++ b/Kconfig
@@ -53,6 +53,12 @@ config WPANUSB_CONSOLE
 	help
 	  Enable this option to use WPANUSB for console.
 
+config WPANUSB_DEVICE_VALID_CHANNELS
+	hex "valid IEEE802154 channels bitmap"
+	default 0x07FFF800
+	help
+	  bitmap indiciating valid IEEE802154 channels.
+
 config WPANUSB_HDLC_NUM_BLOCKS
 	int "Number of message blocks to reserve"
 	default 50
