--- a/prj.conf
+++ b/prj.conf
@@ -29,3 +29,4 @@ CONFIG_IEEE802154_CC13XX_CC26XX=y
 CONFIG_NET_CONFIG_IEEE802154_DEV_NAME="IEEE802154_0"
 CONFIG_NET_CONFIG_IEEE802154_CHANNEL=26
 CONFIG_IEEE802154_CC13XX_CC26XX_SUB_GHZ=n
+CONFIG_WPANUSB_DEVICE_VALID_CHANNELS=0x07FFF800
